# nice-sar

./: .gitignore  LICENSE  README.md  environment.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
GEDI/Overlap/: README.md  chip_diagnostics.py  clean_pairs_v2c.py  make_figure.py  make_figure_v2.py  make_figure_v2c.py  next_steps.md  sample_sar.py  sample_sar_v2.py  scale_pairs.py
GEDI/Overlap/data/: aoi_amazon_frontier_large.geojson  aoi_para_feasibility.geojson
GEDI/Overlap/feasibility/: notebook.ipynb  report.md  results_summary.csv  sar_coverage.json
GEDI/Overlap/outputs/: pairs_with_sar_v2c_audit.csv
GEDI/Overlap/outputs/diagnostics/: chip_sites.parquet
GEDI/Overlap/outputs/diagnostics/v2c/: chip_sites.parquet
GEDI/Overlap/outputs/figures/: decisions_log.md  fit_stats.json
GEDI/Overlap/outputs/figures/v2/: decisions_log.md  fit_stats.json
GEDI/Overlap/outputs/figures/v2c/: decisions_log.md  fit_stats.json
Implementation/: plan_1_progress.md
docs/: chpc-guide.md  getting-started.md  index.md  notebooks.md
docs/api/: analysis.md  auth.md  io.md  preprocess.md  search.md  viz.md
nice_sar/: __init__.py  _types.py  cli.py  config.py
nice_sar/analysis/: __init__.py  decomposition.py  insar.py  polarimetry.py  timeseries.py
nice_sar/auth/: __init__.py  earthdata.py
nice_sar/io/: __init__.py  bbox_parser.py  download.py  geotiff.py  hdf5.py  products.py  subset.py
nice_sar/preprocess/: __init__.py  calibration.py  filters.py  multilook.py  texture.py
nice_sar/search/: __init__.py  asf.py  earthdata.py
nice_sar/viz/: __init__.py  display.py  mapping.py  rgb.py
notebooks/: 00_data_discovery.ipynb  01_search_and_download.ipynb  02_read_gcov.ipynb  03_preprocessing.ipynb  04_rgb_composites.ipynb  05_polarimetric_analysis.ipynb  06_insar_coherence.ipynb  07_timeseries_change.ipynb  08_subset_download.ipynb  CHPC_INSTRUCTIONS.md
scripts/: run_notebook.sh  submit_notebook.slurm
tests/: conftest.py  test_cli.py
tests/fixtures/: create_synthetic_gcov.py  create_synthetic_goff.py  create_synthetic_gslc.py  create_synthetic_gunw.py  create_synthetic_rslc.py
tests/test_analysis/: test_decomposition.py  test_insar.py  test_polarimetry.py  test_timeseries.py
tests/test_auth/: test_earthdata.py
tests/test_io/: test_download.py  test_geotiff.py  test_hdf5.py  test_products.py  test_subset.py
tests/test_preprocess/: test_calibration.py  test_filters.py  test_multilook.py  test_texture.py
tests/test_search/: test_asf.py
tests/test_viz/: test_display.py  test_mapping.py  test_rgb.py
